--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <title>Universal Gravitation with Phaser</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js">function createExplosion(x, y) {
+      const explosion = this.add.particles(x, y, 'explosion', {
+        speed: { min: -100, max: 100 },
+        angle: { min: 0, max: 360 },
+        lifespan: 300,
+        quantity: 10,
+        scale: { start: 0.5, end: 0 },
+        tint: 0xffaa00
+      });
+      setTimeout(() => explosion.destroy(), 300);
+    }
+  </script>
   <style>
     body {
       margin: 0;
@@ -211,6 +222,7 @@
           const dist = Math.sqrt(dx * dx + dy * dy);
           const sunRadius = sys.sun.radius || Math.cbrt(sys.sun.mass);
           if (dist < sunRadius) {
+            createExplosion.call(this, bullet.x, bullet.y);
             bullet.destroy();
             return;
           }
@@ -220,6 +232,7 @@
             const distp = Math.sqrt(dxp * dxp + dyp * dyp);
             const planetRadius = p.body.radius || Math.cbrt(p.body.mass);
             if (distp < planetRadius) {
+              createExplosion.call(this, bullet.x, bullet.y);
               bullet.destroy();
               return;
             }
